fixed flex slider viewport for albums on mobile

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -584,6 +584,10 @@ article {
     display: inline-block;
 }
 
+.flexslider-albums .flex-viewport {
+    max-height: none;
+}
+
 /*  ----------------------------------------=VIDEOS */
 
 .group-videos {
